--- a/client/src/index.css
+++ b/client/src/index.css
@@ -15,3 +15,12 @@
     background-color: #f9f9f9;
   }
 }
+
+/* Hide TinyMCE Warnings and Branding */
+.tox-notification,
+.tox-notification--in-fixed-container,
+.tox-notification--warning,
+.tox-promotion,
+.tox-statusbar__branding {
+  display: none !important;
+}
